--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>NATO-ify</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/nato-phonetic.js"></script>
@@ -10,13 +10,15 @@
   </head>
   <body>
     <div class="container">
+      <h1>NATO-ify</h1>
       <form id="convert-form">
         <div>
           <input id="input" class="input" type="text" name="input" value="spell">
         </div>
         <button id="convert" type="submit">Convert</button>
       </form>
-      <pre id="output" class="output"></pre>
+      <div id="output" class="output">
+      </div>
     </div>
   </body>
 </html>
