Add cache-busting for assets

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>NATO-ify</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/nato-phonetic.js"></script>
-    <script src="js/script.js"></script>
-    <link href="css/style.css" rel="stylesheet">
+    <script src="js/nato-phonetic.js?{{site.time | date: '%s%N'}}"></script>
+    <script src="js/script.js?{{site.time | date: '%s%N'}}"></script>
+    <link href="css/style.css?{{site.time | date: '%s%N'}}" rel="stylesheet">
   </head>
   <body>
     <div class="container">
